# EXUDYN

./: .gitignore  LICENSE.txt  README.rst  coordinatesSolution.txt  fb.slx
.github/workflows/: wheels.yml
docs/theDoc/: theDoc.aux  theDoc.bbl  theDoc.blg  theDoc.fdb_latexmk  theDoc.fls  theDoc.out  theDoc.toc
iiwa_description/: iiwa14_floating.slx
iiwa_description/slprj/_jitprj/: s2rzSCoCYT0qWKi29nAMdNF.l  s6s3BFcfSjMy9gvyNRA8Y0D.l
iiwa_description/urdf/: iiwa14.urdf  untitled.slx
iiwa_ffrf_beam/: README.md  iiwa14_ratio_flexible_module.slx  iiwa14_ratio_flexible_module.slx.autosave  iiwa14_ratio_flexible_module.slxc  joint_angles_generate.m
iiwa_ffrf_beam/data/: simulation_config.json
iiwa_ffrf_beam/scripts/: beam_ffrf_setup.py  iiwa_cantilever_simulation.py  iiwa_cantilever_visualize.py  run_iiwa_beam_simulation.py
main/pythonDev/Examples/flexible_pendulum_cpp/: CMakeLists.txt  export_tip_trajectory.py  flexible_pendulum_cpp  flexible_pendulum_cpp.cpp  plot_tip_trajectory.m  python_flexible_pendulum.py
main/pythonDev/Examples/flexible_pendulum_cpp/data/: tip_trajectory.csv
main/pythonDev/Examples/flexible_pendulum_cpp/flexible_pendulum_cpp.dSYM/Contents/: Info.plist
main/pythonDev/Examples/flexible_pendulum_cpp/flexible_pendulum_cpp.dSYM/Contents/Resources/DWARF/: flexible_pendulum_cpp
main/pythonDev/Examples/flexible_pendulum_cpp/flexible_pendulum_cpp.dSYM/Contents/Resources/Relocations/aarch64/: flexible_pendulum_cpp.yml
output/: flexible_pendulum_visualize.m
output_matrices/: ANCFrigid_double_pendulum_DAE_matrices.npz
(+11 files in other folders)
